# everything-claude-code

./: .gitignore  CLAUDE.md  LICENSE  README.md  package.json  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
agents/: doc-updater.md  embedded-docs-coverage.md  embedded-prompt-fit.md  embedded-reviewer.md
commands/: rules-distill.md  skill-create.md  update-codemaps.md  update-docs.md
hooks/: hooks.json
rules/: TODO_RULES.md
rules/common/: agents.md  development-workflow.md  git-workflow.md  hooks.md
scripts/hooks/: governance_capture.py  run-node.sh  run_with_flags.py
scripts/lib/: hook_flags.py  utils.py
skills/ck/: SKILL.md
skills/codebase-onboarding/: SKILL.md
skills/configure-ecc/: SKILL.md
skills/context-budget/: SKILL.md
skills/embedded-rtos-patterns/: SKILL.md
skills/iterative-retrieval/: SKILL.md
skills/product-lens/: SKILL.md
skills/prompt-optimizer/: SKILL.md
skills/rules-distill/: SKILL.md
skills/safety-guard/: SKILL.md
skills/skill-comply/: SKILL.md
skills/skill-stocktake/: SKILL.md
tests/: run_all.py
tests/hooks/: governance_capture_test.py  hook_flags_test.py  hooks.test.js  hooks_test.py
tests/integration/: hooks.test.js  hooks_test.py
tests/lib/: utils_test.py
